force-app/main/default/objects/Originating_Number__c/Originating_Number__c.object-meta.xml
<CustomObject>
    <label>Originating Number</label>
    <nameField>
        <displayFormat>ON-{0000}</displayFormat>
        <label>Originating Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Originating Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>