force-app/main/default/objects/Originating_Number__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection Type</label>
    <referenceTo>Connection_Type__c</referenceTo>
    <relationshipLabel>Originating Numbers</relationshipLabel>
    <relationshipName>R00N50000001caH8EAI</relationshipName>
    <type>Lookup</type>
</CustomField>