force-app/main/default/objects/Originating_Number__c/fields/Originating_Number__c.field-meta.xml
<CustomField>
    <fullName>Originating_Number__c</fullName>
    <label>Originating Number</label>
    <type>Phone</type>
</CustomField>